Support cgroupV2 for by using `jdk.internal.platform.Metrics` in Pulsar Loadbalancer